apps/base/keycloak/deployment.yaml
#
# Reference:
# https://github.com/keycloak/keycloak/discussions/12594
# https://www.keycloak.org/docs/latest/upgrading/
# https://www.keycloak.org/server/all-config
#

apiVersion: v1
kind: Service
metadata:
  name: keycloak-headless
  namespace: keycloak
  labels:
    app.kubernetes.io/component: service
    app.kubernetes.io/name: keycloak-headless
spec:
  selector:
    app.kubernetes.io/component: app
    app.kubernetes.io/name: keycloak
  clusterIP: None
  sessionAffinity: None
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
    - name: jgroups
      port: 7600
      targetPort: jgroups
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: keycloak
  labels:
    app.kubernetes.io/component: service
    app.kubernetes.io/name: keycloak
spec:
  selector:
    app.kubernetes.io/component: app
    app.kubernetes.io/name: keycloak
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
    - name: management
      port: 9000
      targetPort: management
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: keycloak
  labels:
    app.kubernetes.io/component: app
    app.kubernetes.io/name: keycloak
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: app
      app.kubernetes.io/name: keycloak
  template:
    metadata:
      labels:
        app.kubernetes.io/component: app
        app.kubernetes.io/name: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:25.0.6 # {"$imagepolicy": "keycloak:keycloak"}
          imagePullPolicy: IfNotPresent
          args: ['start']
          ports:
            - name: jgroups
              containerPort: 7600
              protocol: TCP
            - name: http
              containerPort: 8080
              protocol: TCP
            - name: management
              containerPort: 9000
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 1Gi
            limits:
              cpu: 1500m
              memory: 2Gi
          readinessProbe:
            initialDelaySeconds: 90
            timeoutSeconds: 30
            httpGet:
              path: /health/ready
              port: management
