apps/base/keycloak/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-postgres-db
  namespace: keycloak
  labels:
    app: keycloak
spec:
  selector:
    app: keycloak-postgressql-db
  type: NodePort
  ports:
    - name: pgql
      port: 5432
      protocol: TCP
      targetPort: 5432
      nodePort: 30007
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: keycloak-postgressql-db
  namespace: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak-postgressql-db
  template:
    metadata:
      labels:
        app: keycloak-postgressql-db
    spec:
      containers:
        - name: keycloak-postgressql-db
          image: postgres:14.5
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
              subPath: pgdata
      terminationGracePeriodSeconds: 60
  volumeClaimTemplates:
    - metadata:
        name: postgres-data
      spec:
        accessModes:
          - 'ReadWriteOnce'
        resources:
          requests:
            storage: 10Gi
